--- a/_posts/projects/2017-05-22-d4um.md
+++ b/_posts/projects/2017-05-22-d4um.md
@@ -4,7 +4,7 @@ title:  "Data 4 Urban Mobility"
 date:   2017-05-22 16:00:00 +0100
 category : projects
 tagline: ""
-tags : [classification, java, rdf, weka]
+tags : [Java, Classification, RDF, Weka, NLP]
 abstract : "The basic idea of this project is to classify the events stored in RDF-Quads format as regional events or non-regional events."
 ---
 {% include JB/setup %}
