--- a/_posts/projects/2017-09-08-innobbne.md
+++ b/_posts/projects/2017-09-08-innobbne.md
@@ -4,7 +4,7 @@ title:  "InnoBBNE"
 date:   2017-09-08 03:00:00 +0100
 category : projects
 tagline: ""
-tags : [Ionic, CouchDB, nodejs, cordova, typescript]
+tags : [Ionic, CouchDB, Cordova, TypeScript]
 abstract : "The project is based on Ionic."
 ---
 {% include JB/setup %}
